--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ services:
   app:
     container_name: flay
     build:
-      context: ../
-      dockerfile: deployments/app/Dockerfile
+      context: ./
+      dockerfile: app/Dockerfile
     volumes:
-      - "../app:/app"
+      - "./app:/app"
     ports:
       - "5000:5000"
     stdin_open: true
     tty: true
   db:
-    build: "./db"
+    image: mongo:4.0.0
