--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,5 +5,6 @@ RUN apt-get update -y && \
 	apt-get install -y python3-pip python-dev build-essential
 RUN pip3 install -r requirements.txt
 RUN pip3 install flask
+RUN pip3 install progress
 ENTRYPOINT ["python3"]
 CMD ["app.py"]
