Fixed pagination for search results page. Added functionality for saving of latest query in session.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "2"
 services:
   app:
     container_name: flay
+    restart: always
     build:
       context: ./
       dockerfile: app/Dockerfile
